<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageEvent"
            android:contentDescription="@string/event_image"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/textEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/textEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_date" />

        <TextView
            android:id="@+id/textEventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_location" />

        <TextView
            android:id="@+id/textEventCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
